tests/purs/failing/RowDiffs/C.purs
module RowDiffs.C where

c = [{ a: 1, b: 2 }, { a: true, b: 2 }]
